--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Nimiq",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "rollup -c"
+    "build": "tsc && rollup -c"
   },
   "files": [
     "dist"
@@ -17,6 +17,7 @@
     "@nimiq/utils": "^0.0.2"
   },
   "devDependencies": {
+    "@nimiq/core-types": "^1.0.0",
     "rollup": "^0.65.0"
   }
 }
