--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimiq/nano-api",
-  "version": "0.0.9",
+  "version": "0.1.0-alpha1",
   "description": "Nano Network API",
   "main": "dist/nano-network-api.umd.js",
   "module": "dist/nano-network-api.es.js",
